--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,47 +1,45 @@
-<mvc:View
-    controllerName="ccss.sap.projectccss.controller.Main"
-    xmlns:mvc="sap.ui.core.mvc"
-    displayBlock="true"
+<mvc:View controllerName="ccss.sap.projectccss.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
     xmlns:core="sap.ui.core"
     xmlns:f="sap.ui.layout.form"
-    xmlns:unified="sap.ui.unified"
->
-	<Shell id="shell">
-		<App id="app">
-			<pages>
-				<Page id="page" title="{i18n>title}">
-					<content>
-                    <Image src="images/MoviesHeader.png" width="100%" tooltip="Movie Img"></Image>
-                    <f:SimpleForm id="form" editable="true" layout="ColumnLayout" title="Find Movies" columnsM="2" columnsL="3" columnsXL="3">
-                        <f:content>
-                            <Label text="City" labelFor="city"></Label>
-                            <SearchField id="city" placeholder="Enter City" showSearchButton="false"></SearchField>
-                            <Label text="Genre" labelFor="genre"></Label>
-                            <Select id="genre">
-                            <core:ListItem icon="sap-icon://video" key="" text="All"></core:ListItem>
-                            <core:ListItem icon="sap-icon://physical-activity" key="Action" text="Action"></core:ListItem>
-                            <core:ListItem icon="sap-icon://video" key="Horror" text="Horror"></core:ListItem>
-                            <core:ListItem icon="sap-icon://video" key="SienceFiction" text="Science Fiction"></core:ListItem>
-                    </Select>
-                    <Button text="Find Movies" type="Emphasized" press="onPress"></Button>
-                        </f:content>
-                    </f:SimpleForm>
-                    <PlanningCalendar id="calendar" startDate="{path: 'movies>/initDate', formatter: '.formatter.formatDate'}" rows="{movies>/movies}" appointmentsVisualization="Filled">
-                        <toolbarContent>
-                            <Title text="Showtimes" titleStyle="H3"></Title>
-                        </toolbarContent>
-                        <rows>
-                            <PlanningCalendarRow title="{movies>name}" text="" appointments="">
-                                <appointments>
-
-                                </appointments>
-                            </PlanningCalendarRow>
-                        </rows>
-                    </PlanningCalendar>
+    xmlns:unified="sap.ui.unified">
+    <Shell id="shell">
+        <App id="app">
+            <pages>
+                <Page id="page" title="{i18n>title}">
+                    <content>
+                        <Image src="images/MoviesHeader.png" width="100%" tooltip="Movie Img"></Image>
+                        <f:SimpleForm id="form" editable="true" layout="ColumnLayout" title="Find Movies" columnsM="2" columnsL="3" columnsXL="3">
+                            <f:content>
+                                <Label text="City" labelFor="city"></Label>
+                                <SearchField id="city" placeholder="Enter City" showSearchButton="false"></SearchField>
+                                <Label text="Genre" labelFor="genre"></Label>
+                                <Select id="genre">
+                                    <core:ListItem icon="sap-icon://video" key="" text="All"></core:ListItem>
+                                    <core:ListItem icon="sap-icon://physical-activity" key="Action" text="Action"></core:ListItem>
+                                    <core:ListItem icon="sap-icon://video" key="Horror" text="Horror"></core:ListItem>
+                                    <core:ListItem icon="sap-icon://video" key="SienceFiction" text="Science Fiction"></core:ListItem>
+                                </Select>
+                                <Button text="Find Movies" type="Emphasized" press="onPress"></Button>
+                            </f:content>
+                        </f:SimpleForm>
+                        <PlanningCalendar id="calendar" startDate="{path: 'movies>/initDate', formatter: '.formatter.formatDate'}" rows="{movies>/movies}" appointmentsVisualization="Filled">
+                            <toolbarContent>
+                                <Title text="Showtimes" titleStyle="H3"></Title>
+                            </toolbarContent>
+                            <rows>
+                                <PlanningCalendarRow title="{movies>name}" text="{movies>genre}" appointments="{path: 'movies>appointments', templateShareable: 'true'}">
+                                    <appointments>
+                                        <unified:CalendarAppointment startDate="{path: 'movies>startDate', formatter: '.formatter.formatDate'}" endDate="{path: 'movies>endDate', formatter: '.formatter.formatDate'}" title="{movies>info}" text="{movies>cinemaName}" icon="{movies>icon}" type="{movies>type}">
+                                        </unified:CalendarAppointment>
+                                    </appointments>
+                                </PlanningCalendarRow>
+                            </rows>
+                        </PlanningCalendar>
                     </content>
-				</Page>
-			</pages>
-		</App>
-	</Shell>
+                </Page>
+            </pages>
+        </App>
+    </Shell>
 </mvc:View>
