--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -9,24 +9,24 @@
             <pages>
                 <Page id="page" title="{i18n>title}">
                     <content>
-                        <Image src="images/MoviesHeader.png" width="100%" tooltip="Movie Img"></Image>
-                        <f:SimpleForm id="form" editable="true" layout="ColumnLayout" title="Find Movies" columnsM="2" columnsL="3" columnsXL="3">
+                        <Image src="images/MoviesHeader.png" width="100%" tooltip="{i18n>imageTooltip}"></Image>
+                        <f:SimpleForm id="form" editable="true" layout="ColumnLayout" title="{i18n>titleForm}" columnsM="2" columnsL="3" columnsXL="3">
                             <f:content>
-                                <Label text="City" labelFor="city"></Label>
-                                <SearchField id="city" placeholder="Enter City" showSearchButton="false"></SearchField>
-                                <Label text="Genre" labelFor="genre"></Label>
+                                <Label text="{i18n>labelCity}" labelFor="city"></Label>
+                                <SearchField id="city" placeholder="{i18n>cityPlaceholder}" showSearchButton="false"></SearchField>
+                                <Label text="{i18n>labelGenre}" labelFor="genre"></Label>
                                 <Select id="genre">
-                                    <core:ListItem icon="sap-icon://video" key="" text="All"></core:ListItem>
-                                    <core:ListItem icon="sap-icon://physical-activity" key="Action" text="Action"></core:ListItem>
-                                    <core:ListItem icon="sap-icon://video" key="Horror" text="Horror"></core:ListItem>
-                                    <core:ListItem icon="sap-icon://video" key="SienceFiction" text="Science Fiction"></core:ListItem>
+                                    <core:ListItem icon="sap-icon://video" key="" text="{i18n>genreAll}"></core:ListItem>
+                                    <core:ListItem icon="sap-icon://physical-activity" key="Action" text="{i18n>genreAction}"></core:ListItem>
+                                    <core:ListItem icon="sap-icon://video" key="Horror" text="{i18n>genreHorror}"></core:ListItem>
+                                    <core:ListItem icon="sap-icon://video" key="SienceFiction" text="{i18n>genreScienceFiction}"></core:ListItem>
                                 </Select>
-                                <Button text="Find Movies" type="Emphasized" press="onPress"></Button>
+                                <Button text="{i18n>buttonMovieSearch}" type="Emphasized" press="onPress"></Button>
                             </f:content>
                         </f:SimpleForm>
                         <PlanningCalendar id="calendar" startDate="{path: 'movies>/initDate', formatter: '.formatter.formatDate'}" rows="{movies>/movies}" appointmentsVisualization="Filled">
                             <toolbarContent>
-                                <Title text="Showtimes" titleStyle="H3"></Title>
+                                <Title text="{i18n>calendarTitle}" titleStyle="H3"></Title>
                             </toolbarContent>
                             <rows>
                                 <PlanningCalendarRow title="{movies>name}" text="{movies>genre}" appointments="{path: 'movies>appointments', templateShareable: 'true'}">
