--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="ccss.sap.projectccss.controller.Home"
+<mvc:View controllerName="ccss.sap.projectccss.controller.Main"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
     xmlns:core="sap.ui.core"
@@ -22,7 +22,7 @@
                     <Button text="{i18n>buttonMovieSearch}" type="Emphasized" press="onPress"></Button>
                 </f:content>
             </f:SimpleForm>
-            <PlanningCalendar id="calendar" startDate="{path: 'movies>/initDate', formatter: '.formatter.formatDate'}" rows="{movies>/movies}" appointmentsVisualization="Filled" appointmentSelect=".onAppointmentSelect($($parameters>/appointment))">
+            <PlanningCalendar id="calendar" startDate="{path: 'movies>/initDate', formatter: '.formatter.formatDate'}" rows="{movies>/movies}" appointmentsVisualization="Filled" appointmentSelect=".onAppointmentSelect(${$parameters>/appointment})">
                 <toolbarContent>
                     <Title text="{i18n>calendarTitle}" titleStyle="H3"></Title>
                 </toolbarContent>
