--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -4,23 +4,37 @@
     xmlns:core="sap.ui.core"
     xmlns:l="sap.ui.layout">
 
-            <Page id="" title="{movies>cinemaName] - {path: '{movies>startDate]', type: 'sap.ui.model.type.Date', formatOptions: { source: {pattern: 'MM/dd/yyyy/hh:mm:ss'}, relative: true, relatuveScale: 'auto'}}" showNavButton="true" navButtonPress=".onNavBack">
-                <content>
-                    <FlexBox wrap="Wrap">
-                        <l:VerticalLayout id="generalDetails">
-                            <core:Icon src="{movies>icon}" size="3rem" class="sapUiMediumMarginBottom"></core:Icon>
-                            <Label text="{i18n>cinemaAddress}" design="Bold"></Label>
-                            <Text text="{movies>cinemaAddress}"></Text>
-                            <Label text="{i18n>special}" design="Bold"></Label>
-                            <Text text="{movies>special}"></Text>
-                            <Label text="{i18n>seats}" design="Bold"></Label>
-                            <Text text="{movies>seats}"></Text>
-                            <Label text="{i18n>technicalDetails}" design="Bold"></Label>
-                            <Text text="{movies>technicalDetails}"></Text>
-                        </l:VerticalLayout>
-                        <Image width="100%" src="{movies>pic}"/>
-                    </FlexBox>
-                </content>
-            </Page>
- 
+    <Page title="{movies>cinemaName} - {
+			path: 'movies>startDate',
+			type: 'sap.ui.model.type.Date',
+			formatOptions: {
+				source: {
+					pattern: 'MM/dd/yyyy/hh:mm:ss'
+				},
+				relative: true,
+				relativeScale: 'auto'
+			}
+		}" showNavButton="true" class="sapUiResponsiveContentPadding" navButtonPress=".onNavBack">
+        <content>
+            <FlexBox wrap="Wrap">
+                <l:VerticalLayout id="generalDetails" class="sapUiMediumMarginEnd sapUiSmallMarginBottom">
+                    <core:Icon src="{movies>icon}" size="3rem" class="sapUiMediumMarginBottom"/>
+
+                    <Label text="{i18n>cinemaAddress}" design="Bold"/>
+                    <Text text="{movies>cinemaAddress}" class="sapUiMediumMarginBottom"/>
+
+                    <Label text="{i18n>special}" design="Bold"/>
+                    <Text text="{movies>special}" class="sapUiMediumMarginBottom"/>
+
+                    <Label text="{i18n>seats}" design="Bold"/>
+                    <Text text="{movies>seats}" class="sapUiMediumMarginBottom"/>
+
+                    <Label text="{i18n>technicalDetails}" design="Bold"/>
+                    <Text text="{movies>technicalDetails}" width="400px"/>
+                </l:VerticalLayout>
+                <Image width="100%" src="{movies>pic}"/>
+            </FlexBox>
+        </content>
+    </Page>
+
 </mvc:View>
